# hike

./: .gitignore  CONTRIBUTING.md  ChangeLog.md  LICENSE  Makefile  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs-pages.yaml  style-lint-and-test.yaml
docs/: index.md
docs-site/: astro.config.mjs  package.json
docs-site/scripts/: render_docs_assets.py
docs-site/src/components/: ScreenshotFigure.astro
docs-site/src/content/docs/: changelog.mdx  commands.mdx  index.mdx  license.mdx
docs-site/src/content/docs/cli/: bindings-and-themes.mdx  config.mdx  env.mdx  index.mdx  open.mdx  schema.mdx
docs-site/src/content/docs/configuration/: file-browser-and-startup.mdx  files-and-environment.mdx  index.mdx  keybindings.mdx  ui-and-content.mdx
docs-site/src/content/docs/guides/: getting-started.mdx  viewing-and-navigation.mdx
docs-site/src/pages/: 404.astro
docs-site/src/styles/: custom.css
docs/screenshots/: basic_app.py  config.yaml
docs/source/: CNAME  changelog.md  cli.md  commands.md  configuration-file-browser-and-startup.md  configuration-files-and-environment.md  configuration-keybindings.md  configuration-ui-and-content.md  configuration.md  index.md  license.md
src/hike/: __init__.py  __main__.py  app_info.py  build_info.py  command_catalog.py  compat.py  hike.py  icons.py  keybinding_catalog.py  startup.py  theme_catalog.py  types.py
src/hike/cli/: __init__.py  app.py  bindings_cmd.py  common.py  config_cmd.py  contracts.py  env_cmd.py  runtime.py  schema_cmd.py  services.py  themes_cmd.py
src/hike/commands/: __init__.py  main.py  navigation.py
src/hike/data/: __init__.py  config.py  discovery.py  ignore_files.py  layout.py  local_browser.py  local_index.py  location_types.py  runtime_context.py  settings.py
src/hike/editor/: screen.py
src/hike/markdown/: __init__.py  wikilinks.py
src/hike/messages/: __init__.py  history.py  opening.py
src/hike/providers/: __init__.py  history.py  main.py
src/hike/runtime/: bootstrap.py  config_access.py
src/hike/screens/: main.py
src/hike/support/: __init__.py
src/hike/widgets/: viewer.py
src/hike/widgets/command_line/: general.py  obsidian.py  open_from_forge.py  widget.py
src/hike/widgets/navigation/: bookmarks_view.py  history_view.py  local_browser.py  local_flat_view.py  local_view.py  widget.py
tests/e2e/: test_cli_e2e.py  test_tmux_e2e.py  test_tui_e2e.py
tests/unit/: test_cli_options.py  test_cli_services.py  test_command_line_commands.py  test_config.py  test_discovery.py  test_docs_screenshots.py  test_ignore_files.py  test_layout.py  test_local_browser.py  test_location_types.py  test_opening_messages.py  test_runtime_config_access.py  test_startup.py
