[project]
name = "hike"
version = "1.1.0"
description = "A Markdown browser for the terminal"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "textual>=2.1.1",
    "textual-enhanced>=0.13.0",
    "textual-fspicker>=0.4.1",
    "xdg-base-dirs>=6.0.2",
    "httpx>=0.28.1",
    "typing-extensions>=4.12.2",
    "pyperclip>=1.9.0",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
keywords = [
    "terminal",
    "tui",
    "chui",
    "documentation",
    "markdown",
    "markdown-viewer",
    "file-viewer",
    "file-browser",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Terminals",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://hike.davep.dev/"
Repository = "https://github.com/davep/hike"
Documentation = "https://hike.davep.dev/"
Source = "https://github.com/davep/hike"
Issues = "https://github.com/davep/hike/issues"
Discussions = "https://github.com/davep/hike/discussions"

[project.scripts]
hike = "hike.__main__:main"

[build-system]
# https://github.com/astral-sh/rye/issues/1446
requires = ["hatchling==1.26.3", "hatch-vcs"]
# requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "textual-dev>=1.7.0",
    "pytest>=8.3.4",
    "mkdocs-material>=9.6.11",
    "markdown-exec>=1.10.3",
    "codespell>=2.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hike"]

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]
